# mlir_affine_loop_transformation

./: .gitignore  CMakeLists.txt  build.sh  buildscript.sh  cases.sh  dependency_2d_loop.c  dependency_2d_loop.ll  dependency_2d_loop.mlir  simple_1d_loop.c  simple_1d_loop.ll  simple_1d_loop.mlir  simple_2d_loop.c  simple_2d_loop.ll  simple_2d_loop.mlir  simple_array_access.c  simple_array_access.ll  simple_array_access.mlir
cases/: buildscript.sh  centrosymmetric.c  dependency_allowed_2d_loop.c  dependency_blocked_2d_loop.c  dependency_swapped_2d_loop.c  knapsack.c  mat3d.c  matmul.c  matmul_tiled.c  matmul_tiled_2l  matmul_tiled_2l.c  simple_2d_loop.c  simple_array_access.c
include/: CMakeLists.txt
include/loopinterchange/: Passes.h  Passes.td
include/loopinterchange/Passes/: CMakeLists.txt  Passes.h
include/polygeist/Passes/: Passes.h  Passes.td
lib/loopinterchange/Passes/: LoopInterleave.cpp  LoopTiling.cpp  PassDetails.h  TestPrint.cpp
lib/loopinterchange/Transforms/: CMakeLists.txt  LoopInterleave.cpp  LoopTiling.cpp  PassDetails.h  TestPrint.cpp
lib/polygeist/Passes/: CMakeLists.txt  ConvertParallelToGPU.cpp  ConvertPolygeistToLLVM.cpp  LoopInterleave.cpp  LoopTiling.cpp  SerializeToCubin.cpp  TestPrint.cpp
tools/: CMakeLists.txt
tools/affineswap-opt/: CMakeLists.txt  affineswap-opt.cpp
tools/loop-opt/: CMakeLists.txt  loop-opt.cpp
